--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
 appdirs
 click
 filelock
+frozendict
 httpx
 pex
+
+# N.B.: Keep this aligned with pants.toml
+pytest==7.2.0
+
+tomli
 tqdm
 types-appdirs
+types-frozendict
 types-tqdm
