--- a/science.toml
+++ b/science.toml
@@ -18,9 +18,12 @@ lazy = true
 # Providers can define an optional configuration object (table) of arbitrary shape to be handed to
 # them by the science infra.
 [science.interpreters.configuration]
-release = "20221220"
+# Optional, defaults to the latest PBS release.
+#release = "20221220"
+# Can be exact, e.g.: 3.10.9; otherwise finds matching artifacts.
 version = "3.10"
-flavor = "install_only"
+# Optional, defaults to the "install_only" flavor.
+#flavor = "install_only"
 
 [[science.files]]
 name = "science.pex"
