--- a/science.toml
+++ b/science.toml
@@ -7,7 +7,7 @@ platforms = [
     "linux-x86_64",
     "macos-aarch64",
     "macos-x86_64",
-#    "windows-x86_64",
+    "windows-x86_64",
 ]
 
 [[science.interpreters]]
