Ditch frozendict and gain self cross-build support.

--- a/science/BUILD
+++ b/science/BUILD
@@ -5,4 +5,11 @@ pex_binary(
     entry_point="__main__.py",
     execution_mode="venv",
     output_path="science.pex",
+    platforms=[
+        "linux_aarch64-cp-310-cp310",
+        "linux_x86_64-cp-310-cp310",
+        "macosx_10_9_arm64-cp-310-cp310",
+        "macosx_10_9_x86_64-cp-310-cp310",
+        "win_amd64-cp-310-cp310",
+    ]
 )
