Allow use of a custom scie jump build.

--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,7 +1,12 @@
 python_tests(
     extra_env_vars=[
         "BUILD_ROOT",
-    ]
+    ],
+    overrides={
+        "test_config.py": {
+            "dependencies": ["./data/interpreter-groups.toml"]
+         }
+    }
 )
 
 python_test_utils(
