--- a/tests/BUILD
+++ b/tests/BUILD
@@ -1,10 +1,18 @@
+# Copyright 2022 Science project contributors.
+# Licensed under the Apache License, Version 2.0 (see LICENSE).
+
 python_tests(
     extra_env_vars=[
         "BUILD_ROOT",
     ],
     overrides={
         "test_config.py": {
-            "dependencies": ["./data/interpreter-groups.toml"]
+            "dependencies": [
+                "./data/interpreter-groups.toml"
+            ],
+            "runtime_package_dependencies": [
+                "science:main"
+            ]
          }
     }
 )
