--- a/tests/data/BUILD
+++ b/tests/data/BUILD
@@ -1,3 +1,6 @@
+# Copyright 2023 Science project contributors.
+# Licensed under the Apache License, Version 2.0 (see LICENSE).
+
 resources(
     sources=["*.*"]
 )
