--- a/tests/data/interpreter-groups.toml
+++ b/tests/data/interpreter-groups.toml
@@ -2,6 +2,9 @@
 name = "igs"
 description = "Test interpreter group selection."
 
+[science.scie-jump]
+version = "0.11.0"
+
 [[science.interpreters]]
 id = "cpython310"
 provider = "PythonBuildStandalone"
@@ -26,8 +29,11 @@ members = [
 exe = "#{cpython:python}"
 args = [
     "-c",
-    "import sys; print('.'.join(map(str, sys.version_info[:2])))"
+    """\
+import sys
+
+
+print('.'.join(map(str, sys.version_info[:2])))
+print("{scie.files:hash.#{cpython}}")
+    """,
 ]
-# TODO(John Sirois): These will be inserted by science when it sees #{<IG>:<file>}
-[science.commands.env.replace]
-SCIENCE_IG_CPYTHON_cpython310_python="{}"  # ??
