--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# Pants control and output dirs.
-/.pants.d/
-/.pids/
+# Build artifacts dirs.
+/*.egg-info/
+/build/
 /dist/
 
-# IntelliJ projects.
-.idea/
-*.iml
-*.ipr
+# Python bytecode.
+__pycache__/
 
