--- a/tests/data/interpreter-groups.toml
+++ b/tests/data/interpreter-groups.toml
@@ -8,14 +8,16 @@ version = "0.11.0"
 [[science.interpreters]]
 id = "cpython310"
 provider = "PythonBuildStandalone"
+release = "20230116"
+version = "3.10.9"
 lazy = true
-version = "3.10"
 
 [[science.interpreters]]
 id = "cpython311"
 provider = "PythonBuildStandalone"
+release = "20230116"
+version = "3.11.1"
 lazy = true
-version = "3.11"
 
 [[science.interpreter_groups]]
 id = "cpython"
