--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-22.04, macos-11, macos-13-aarch64, windows-2022]
+    env:
+      SCIENCE_GITHUB_API_BEARER_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Setup Python 3.11
         uses: actions/setup-python@v4
