--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,7 @@ jobs:
       - run:
           name: Install Python 3.11
           command: |
+            sudo add-apt-repository -y ppa:deadsnakes/ppa
             sudo apt update
             sudo apt install -y python3.11-dev python3.11-venv python3.11-distutils
       - run:
