Pin to January PBS, May release is broken.

--- a/tests/data/interpreter-groups.toml
+++ b/tests/data/interpreter-groups.toml
@@ -8,12 +8,14 @@ version = "0.11.0"
 [[science.interpreters]]
 id = "cpython310"
 provider = "PythonBuildStandalone"
+release = "20230116"
 version = "3.10"
 lazy = true
 
 [[science.interpreters]]
 id = "cpython311"
 provider = "PythonBuildStandalone"
+release = "20230116"
 version = "3.11"
 lazy = true
 
