Fix `science build` to handle nested file names. (#7)
Previously a flat name like "science.pyz" would work without a `--path`
mapping if the file was in the cwd, but a name like "dist/science.pyz"
would not even if it the file was at that path relative to the cwd.

Fixes #2

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ science = "science.exe:main"
 version = {attr = "science.__version__"}
 dependencies = {file = "requirements.txt"}
 
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["science*"]
+
 [tool.black]
 line-length = 100
 target-version = ["py311"]
