--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,5 +35,9 @@ profile = "black"
 pythonpath = ["."]
 
 [[tool.mypy.overrides]]
+module = "click_didyoumean"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
 module = "click_log"
 ignore_missing_imports = true
