--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,23 @@
 # See: https://circleci.com/docs/2.1/configuration-reference
 version: 2.1
 
+parameters:
+  GHA_Actor:
+    type: string
+    default: ""
+  GHA_Action:
+    type: string
+    default: ""
+  GHA_Event:
+    type: string
+    default: ""
+  GHA_Meta:
+    type: string
+    default: ""
+
+orbs:
+  gh: circleci/github-cli@2.1.1
+
 jobs:
   test:
     machine:
@@ -34,10 +51,66 @@ jobs:
       - run:
           name: Build & Package
           command: nox -e package
+  package:
+    machine:
+      image: ubuntu-2004:current
+    resource_class: arm.medium
+    steps:
+      - run:
+          name: Install Python 3.11
+          command: |
+            sudo add-apt-repository -y ppa:deadsnakes/ppa
+            sudo apt update
+            sudo apt install -y python3.11-dev python3.11-venv python3.11-distutils
+      - run:
+          name: Setup Nox
+          command: |
+            python3.11 -m venv ~/bin/nox.venv
+            ~/bin/nox.venv/bin/pip install nox
+            cd ~/bin
+            ln -s nox.venv/bin/nox
+            echo "export PATH=~/bin:${PATH}" >> "${BASH_ENV}"
+      - checkout
+      - run:
+          name: Setup Auth for github.com
+          command: echo "export SCIENCE_AUTH_API_GITHUB_COM_BEARER=${GITHUB_TOKEN}" >> "${BASH_ENV}"
+      - run:
+          name: Build & Package
+          command: nox -e package
+      - persist_to_workspace:
+          root: dist
+          paths:
+            - science-*
+  release:
+    docker:
+      - image: 'cimg/base:stable'
+    steps:
+      - gh/setup
+      - attach_workspace:
+          at: dist
+      - run:
+          name: Upload science executables to << pipeline.parameters.GHA_Meta >> Github Release
+          command: |
+            gh release upload << pipeline.parameters.GHA_Meta >> dist/science-* --repo a-scie/lift
 
 workflows:
   ci:
     jobs:
       - test:
+          context:
+            - GITHUB_CREDS
+  release:
+    when: << pipeline.parameters.GHA_Action >>
+    jobs:
+      - package:
+          filters:
+            tags:
+              only: /^v.*/
+      - release:
+          filters:
+            tags:
+              only: /^v.*/
+          requires:
+            - package
           context:
             - GITHUB_CREDS
