--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ jobs:
           command: nox -e package
       - run:
           name: Generate Doc Site
-          command: nox -e doc
+          command: nox -e doc linkcheck
   package:
     machine:
       image: ubuntu-2004:current
