--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,4 +48,4 @@ jobs:
         # We use a fork of https://github.com/vsalvino/sphinx-library currently which necessitates
         # a VCS requirement and that nets a non-universal lock item; so we skip for now.
         if: matrix.os != 'windows-2022'
-        run: nox -e doc
+        run: nox -e doc linkcheck
