Tip-toe around invalid ackslash escapes with a raw string.

--- a/tests/data/scie-base.windows.toml
+++ b/tests/data/scie-base.windows.toml
@@ -13,5 +13,5 @@ lazy = true
 exe = "#{cpython:python}"
 args = [
     "-c",
-    "print('Hello from {scie.base}!')"
+    "print(r'Hello from {scie.base}!')"
 ]
