--- a/tests/data/interpreter-groups.toml
+++ b/tests/data/interpreter-groups.toml
@@ -2,7 +2,7 @@
 name = "igs"
 description = "Test interpreter group selection."
 
-[lift.scie-jump]
+[lift.scie_jump]
 version = "0.11.0"
 
 [[lift.interpreters]]
