Improve unrecognized field help.
Point to the manifest format docs and make these easier to access
via new support for `science doc open <page>` to enable using
`science doc open manifest` to directly oprn the manifest docs.

--- a/lift.toml
+++ b/lift.toml
@@ -40,4 +40,4 @@ remove_re = [
 ]
 [lift.commands.env.replace]
 SHIV_ROOT = "{scie.bindings}/shiv_root"
-SCIENCE_DOC_LOCAL = "{docsite}/index.html"
+SCIENCE_DOC_LOCAL = "{docsite}"
