Error for unrecognized `lift` manifest fields. (#47)
Fixes #46

--- a/tests/data/unrecognized-config-fields.toml
+++ b/tests/data/unrecognized-config-fields.toml
@@ -2,8 +2,13 @@
 name = "igs"
 description = "Test interpreter group selection."
 
-[lift.scie_jump]
+# N.B: `scie-jump` is invalid, should be `scie_jump`.
+[lift.scie-jump]
 version = "0.11.0"
+
+[lift.scie_jump]
+# N.B: `version2` is invalid, should be `version`.
+version2 = "0.11.0"
 
 [[lift.interpreters]]
 id = "cpython310"
@@ -15,7 +20,8 @@ lazy = true
 id = "cpython311"
 provider = "PythonBuildStandalone"
 version = "3.11"
-lazy = true
+# N.B: `lizzy` is invalid, should be `lazy`.
+lizzy = true
 
 [[lift.interpreter_groups]]
 id = "cpython"
@@ -26,6 +32,8 @@ members = [
 ]
 
 [[lift.commands]]
+# N.B: `environ` is invalid.
+environ = { key = "value" }
 exe = "#{cpython:python}"
 args = [
     "-c",
@@ -41,3 +49,18 @@ data = {{
 json.dump(data, sys.stdout)
     """,
 ]
+[lift.commands.env]
+# N.B: `remove_re2` is invalid, should be `remove_re`.
+remove_re2 = [
+    "regexp"
+]
+# N.B: `replace2` is invalid, should be `replace`.
+[lift.commands.env.replace2]
+KEY = "VALUE"
+
+[lift.app_info]
+key = "value"
+
+# N.B: `app-info` is invalid, should be `app_info`.
+[lift.app-info]
+key2 = "value2"
