--- a/tests/data/unrecognized-config-fields.toml
+++ b/tests/data/unrecognized-config-fields.toml
@@ -33,7 +33,7 @@ members = [
 
 [[lift.commands]]
 # N.B: `environ` is invalid.
-environ = { key = "value" }
+just_wrong = { key = "value" }
 exe = "#{cpython:python}"
 args = [
     "-c",
