Offer suggestions for lift manifest typos. (#51)
Also make the array indexing basis clear when array indexes are used.

--- a/tests/data/unrecognized-config-fields.toml
+++ b/tests/data/unrecognized-config-fields.toml
@@ -32,8 +32,8 @@ members = [
 ]
 
 [[lift.commands]]
-# N.B: `environ` is invalid.
-environ = { key = "value" }
+# N.B: `just_wrong` is invalid.
+just_wrong = { key = "value" }
 exe = "#{cpython:python}"
 args = [
     "-c",
