--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
   org-check:
     name: Check GitHub Organization
     if: github.repository_owner == 'a-scie'
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Noop
         run: "true"
@@ -21,13 +21,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-22.04, macos-11, macos-13-aarch64, windows-2022]
+        # N.B.: macos-12 is the oldest non-deprecated Intel Mac runner and macos-14 is the oldest
+        # non-deprecated ARM Mac runner.
+        os: [ubuntu-22.04, macos-12, macos-14, windows-2022]
     env:
       SCIENCE_AUTH_API_GITHUB_COM_BEARER: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Setup Python 3.12
         uses: actions/setup-python@v5
-        if: matrix.os != 'macos-13-aarch64'
         with:
           python-version: 3.12
       - name: Setup Nox
