--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,14 +45,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-22.04, macos-11, macos-13-aarch64, windows-2022 ]
+        # N.B.: macos-12 is the oldest non-deprecated Intel Mac runner and macos-14 is the oldest
+        # non-deprecated ARM Mac runner.
+        os: [ ubuntu-22.04, macos-12, macos-14, windows-2022 ]
     environment: Release
     env:
       SCIENCE_AUTH_API_GITHUB_COM_BEARER: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Setup Python 3.12
         uses: actions/setup-python@v5
-        if: matrix.os != 'macos-13-aarch64'
         with:
           python-version: 3.12
       - name: Setup Nox
@@ -65,11 +66,10 @@ jobs:
         run: nox -e package
       - name: Prepare Changelog
         id: prepare-changelog
-        uses: a-scie/actions/changelog@v1.3
+        uses: a-scie/actions/changelog@v1.6
         with:
           changelog-file: ${{ github.workspace }}/CHANGES.md
           version: ${{ needs.determine-tag.outputs.release-version }}
-          setup-python: ${{ matrix.os != 'macos-13-aarch64' }}
       - name: Create ${{ needs.determine-tag.outputs.release-tag }} Release
         # Upgrades node16 -> node20: in main but not tagged yet.
         uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
@@ -92,9 +92,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Trigger aarch64 release
-        # Upgrade node16 -> node20: Out for review here:
-        #   https://github.com/CircleCI-Public/trigger-circleci-pipeline-action/pull/75
-        uses: a-scie/trigger-circleci-pipeline-action@5386b18a33d1d272a294422b78d35bd09256fb8f
+        uses: CircleCI-Public/trigger-circleci-pipeline-action@v1.2.0
         with:
           GHA_Meta: "${{ needs.determine-tag.outputs.release-tag }}"
         env:
