--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,6 +51,11 @@ jobs:
     environment: Release
     env:
       SCIENCE_AUTH_API_GITHUB_COM_BEARER: ${{ secrets.GITHUB_TOKEN }}
+    permissions:
+      id-token: write
+      attestations: write
+      contents: write
+      discussions: write
     steps:
       - name: Setup Python 3.12
         uses: actions/setup-python@v5
@@ -64,6 +69,10 @@ jobs:
           ref: ${{ needs.determine-tag.outputs.release-tag }}
       - name: Package science ${{ needs.determine-tag.outputs.release-tag }} binary
         run: nox -e package
+      - name: Generate science ${{ needs.determine-tag.outputs.release-tag }} artifact attestations
+        uses: actions/attest-build-provenance@v1
+        with:
+          subject-path: dist/science-*
       - name: Prepare Changelog
         id: prepare-changelog
         uses: a-scie/actions/changelog@v1.6
@@ -71,10 +80,7 @@ jobs:
           changelog-file: ${{ github.workspace }}/CHANGES.md
           version: ${{ needs.determine-tag.outputs.release-version }}
       - name: Create ${{ needs.determine-tag.outputs.release-tag }} Release
-        # Upgrades node16 -> node20: in main but not tagged yet.
-        uses: softprops/action-gh-release@4634c16e79c963813287e889244c50009e7f0981
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ needs.determine-tag.outputs.release-tag }}
           name: science ${{ needs.determine-tag.outputs.release-version }}
