--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,14 +23,20 @@ jobs:
       matrix:
         # N.B.: macos-12 is the oldest non-deprecated Intel Mac runner and macos-14 is the oldest
         # non-deprecated ARM Mac runner.
-        os: [ubuntu-22.04, macos-12, macos-14, windows-2022]
+        os: [ubuntu-22.04, linux-arm64, macos-12, macos-14, windows-2022]
     env:
       SCIENCE_AUTH_API_GITHUB_COM_BEARER: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - name: Setup Python 3.12
+        if: ${{ matrix.os != 'linux-arm64' }}
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+      - name: Setup Python 3.12
+        if: ${{ matrix.os == 'linux-arm64' }}
+        run: |
+          python3.12 -m venv .venv
+          echo "$(pwd)/.venv/bin" >> "${GITHUB_PATH}"
       - name: Setup Nox
         run: pip install nox
       - name: Checkout Lift
