--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
       matrix:
         # N.B.: macos-12 is the oldest non-deprecated Intel Mac runner and macos-14 is the oldest
         # non-deprecated ARM Mac runner.
-        os: [ ubuntu-22.04, macos-12, macos-14, windows-2022 ]
+        os: [ ubuntu-22.04, linux-arm64, macos-12, macos-14, windows-2022 ]
     environment: Release
     env:
       SCIENCE_AUTH_API_GITHUB_COM_BEARER: ${{ secrets.GITHUB_TOKEN }}
@@ -58,9 +58,15 @@ jobs:
       discussions: write
     steps:
       - name: Setup Python 3.12
+        if: ${{ matrix.os != 'linux-arm64' }}
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
+      - name: Setup Python 3.12
+        if: ${{ matrix.os == 'linux-arm64' }}
+        run: |
+          python3.12 -m venv .venv
+          echo "$(pwd)/.venv/bin" >> "${GITHUB_PATH}"
       - name: Setup Nox
         run: pip install nox
       - name: Checkout lift ${{ needs.determine-tag.outputs.release-tag }}
@@ -90,16 +96,3 @@ jobs:
           files: dist/science-*
           fail_on_unmatched_files: true
           discussion_category_name: Announcements
-  aarch64-release-trigger:
-    name: Trigger Circle CI Linux aarch64 Github Release
-    needs:
-      - determine-tag
-      - github-release
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Trigger aarch64 release
-        uses: CircleCI-Public/trigger-circleci-pipeline-action@v1.2.0
-        with:
-          GHA_Meta: "${{ needs.determine-tag.outputs.release-tag }}"
-        env:
-          CCI_TOKEN: ${{ secrets.CCI_TOKEN }}
