--- a/lift.toml
+++ b/lift.toml
@@ -7,8 +7,9 @@ description = "Ship your interpreted executables using science."
 [[lift.interpreters]]
 id = "cpython"
 provider = "PythonBuildStandalone"
-release = "20240713"
+release = "20240726"
 version = "3.12.4"
+flavor = "install_only_stripped"
 # By default science ships as a "thin" scie that fetches CPython 3.12 on first run.
 # We use `science lift --invert-lazy cpython ...` when producing "fat" scies.
 lazy = true
